# installed-persona-study

./: .gitignore  LICENSE  PREREGISTRATION.md  README.md  pyproject.toml  requirements-cpu.txt
analysis/: DECISOES-ARQUITETO.md  DIMENSIONAMENTO.md  ENDPOINTS.md  README.md  power.py
batteries/: CODEBOOK.md  LEAKAGE_BASELINE.md  LEDGER_CENARIOS.jsonl  README.md  f3_piloto_v0.items.jsonl  f3_piloto_v1.items.jsonl  f3_piloto_v1_dois_estratos.items.jsonl  f3_piloto_v1_finge_humano.items.jsonl  leakage_baseline_items.jsonl
core/: README.md  SEALS.md  leokadius.core.json  shadowclock.core.json
corpora/: PARIDADE.json  README.md  SOURCES.md  corpus_leokadius.jsonl  corpus_shadowclock.jsonl
docs/: ESTADO-DO-ESTUDO.html
harness/: PORT_LOG.md  README.md  __init__.py  battery.py  build_conversas_html.py  build_corpus.py  config.py  conversa_log.py  core_scorer.py  equalizador.py  exploratorio.py  fetch_sources.py  forced_choice.py  generation.py  ledger_cenarios.py  model_family.py  model_io.py  pairs_validator.py  parity_manifest.py  persona_core.py  polos.py  polos_sujeito.py  prod_validator.py  stats_gates.py  tokenizacao.py  transcript_io.py
judge/: MODELO.md  README.md
paper/: README.md
runners/: build_gemeos_v2.py  busca_adversarial_gemeos.py  run_f3_v0.py  valida_banco.py
runs/: README.md
tests/: conftest.py  test_alcance_dose_media.py  test_battery.py  test_battery_clusters.py  test_build_conversas_html.py  test_busca_adversarial_gemeos.py  test_config_env.py  test_conversa_log.py  test_core_scorer.py  test_cores_personas.py  test_corpora.py  test_polos.py  (+21 more)
(+42 files in other folders)
